Wed May 29 06:58:53 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-sunos5.7.h:
          Fixed possible redefinition warning

        * docs/ACE-development-process.html:
          Extended bczar instructions, updated link

        * tests/Compiler_Features_20_DLL.h:
        * tests/Compiler_Features_20_DLL.cpp:
        * tests/Compiler_Features_20_DLL_Export.h:
        * tests/tests.mpc:
          New C++11 compiler feature test

Tue May 28 09:12:20 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
        * etc/index.html:
          Make x.2.0 links available to the public

Mon May 27 17:46:40 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/libtao-orbsvcs-2.2.0.install:
        * debian/libtao-orbsvcs-dev.install:
          Added new libTAO_Async_ImR_Client_IDL

Mon May 27 12:46:56 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/libtao-2.2.0.install:
        * debian/libtao-dev.install:
          Added new Async IOR Table, needed to build prebuild packages

Mon May 27 10:18:26 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * debian/debian.changelog:
        * docs/bczar/bczar.html:
          Updates in preparation of releasing x.2.0

        * bin/make_release.py:
          Fixed generation of ace.dsc file

Mon May 27 10:09:24 CEST 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.2.0 released.

Tue May 21 17:24:39 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_16_Test.cpp:
          Added a forward declared enum after it has been declared

Mon May 20 18:40:20 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_16_Test.cpp:
          Added also a forward declared enum

Fri May 17 13:48:34 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * bin/fuzz.pl:
