@@ -115,7 +115,7 @@ sub run_program ($@)
     ## if the executable doesn't exist, the error will show
     ## up as part of the previous test.
     print "auto_run_tests: tests/$path $arguments\n";
-    $ENV{COVERITY_TEST_NAME} = "tests/$path";
+    #$ENV{COVERITY_TEST_NAME} = "tests/$path";
 
     my ($program, $dir, $suffix) = fileparse($path);
     my $start_dir = getcwd ();
